# training-adviser

./: .gitignore  Dockerfile  README.md  docker-compose.development.yml  manage.py  pyproject.toml
.github/workflows/: django.yml
core/: admin.py  apps.py  constants.py  models.py  serializers.py  signals.py  views.py
core/migrations/: 0001_initial.py
core/tests/: conftest.py  factories.py  test_models.py
core/tests/test_api/: test_create_user_view.py  test_exercise_log_view.py  test_next_exercise_view.py  test_profile_view.py
core/tests/test_models/: test_model_exercise.py  test_model_exercise_log.py  test_model_profile.py  test_model_user.py
training_adviser/: asgi.py  settings.py  urls.py  wsgi.py
utils/: customfield.py  date_util.py
